spade-tests/src/snapshots/spade_tests__ast_lowering__declaration_without_definition_triggers_error.snap
---
source: spade-tests/src/ast_lowering.rs
---
entity X() -> int<8> {
    decl x;
    x
}


error: Declared variable is not defined
  ┌─ testinput:2:10
  │
2 │     decl x;
  │          ^ This variable is declared but not defined
  │
  = help: Define x with a let or reg binding
  = help: Or, remove the declaration if the variable is unused


